# HIT_Lab

Compile_System/: .gitignore
Compile_System/Lab1/: chapter3-词法分析.ppt  编译系统实验报告模版-词法分析.doc
Compile_System/Lab1/data/: a+b.c  a+b_analyzed.txt  input.c  result.txt
Compile_System/Lab1/src/: config.py  lexical_analyzer.py
Compile_System/Lab2/: 编译系统实验报告模版-语法分析.doc
Compile_System/Lab2/data/: CFG.txt  input.txt  result.txt
Compile_System/Lab2/src/: preprocess.py  syntactic_analyzer.py
Compile_System/Lab3/: 编译系统实验报告模版-语义分析.doc
Compile_System/Lab3/data/: CFG.txt  symbols.txt  tetrads.txt
Computer_Network/: .gitignore
Computer_Network/Lab2/: report.docx
Database_System/: .gitignore
Database_System/Lab1/: report.docx
Database_System/Lab2/: report.docx
Database_System/Lab3/: report.docx
Database_System/Lab3/src/: CMakeLists.txt  badgerdb_main  executor.cpp  executor.h  main.cpp  page.h  r.tbl  r_NLJ_s.tbl  s.tbl  storage.h
Information_Retrieval/: .gitignore
Information_Retrieval/Lab1/: README.md  实验1-网页文本的预处理.docx
Information_Retrieval/Lab2/: README.md  requirements.txt  实验2-问答系统设计与实现.docx
Information_Retrieval/Lab3/: 信息检索实验报告模板.docx  实验3-信息检索系统设计与实现.docx
Machine_Learning/: .gitignore
Machine_Learning/Lab1/: report.docx
Machine_Learning/Lab2/: report.docx
Machine_Learning/Lab3/: report.docx
Machine_Learning/Lab4/: PCA.docx  report.docx
Natural_Language_Process/: .gitignore
Natural_Language_Process/Lab1/: README.md  报告.docx
Natural_Language_Process/Lab2/: README.md  report.docx  requirements.txt  run.bat
(+153 files in other folders)
